<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Calculator</string>
    <string name="app_log_name">Calculator Log</string>
    <string name="app_tutorial_name">Guide</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="summation">+</string>
    <string name="substraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="equal">=</string>
    <string name="delete">DEL</string>
    <string name="clear">Clear</string>
    <string name="percentage">%</string>
    <string name="result">Ans</string>
    <!-- <string name="signAlter">-(x)</string> -->
    <string name="memoryClear">MC</string>
    <string name="memoryRetrieve">MR</string>
    <string name="memorySave">MS</string>
    <string name="memoryPush">M+</string>
    <string name="memoryPop">M-</string>
    <string name="tutorial">Guide</string>
    <string name="history">History</string>
    <string name="textBoxResult">Result : 0.0</string>
    <string name="textViewExpression">Previous Expression</string>
    <string name="tutorialMemoryHeader">Temporary Memory</string>
    <string name="tutorialMemory">Initially memory value is 0.0. You can save any number or result of an expression in it. MS button works for saving data, M+ and M- for making addition and subtraction with the previous data saved in memory(if nothing saved then it will save the same data), MC will clear every thing in memory(make the value 0.0)</string>
    <string name="tutorialPercentageHeader">Percentage Calculation</string>
    <string name="tutorialPercentage">To calculate percentage use this formula: amount*percentage%</string>
    <string name="tutorialAnswerHeader">Retrieve The Previous Answer</string>
    <string name="tutorialAnswer">To retrieve the previous result press this button</string>
    <string name="tutorialClearAndDeleteHeader">Clear And Delete Activity</string>
    <string name="tutorialClearAndDelete">Clear button will clear all the data except the saved data in the memory</string>
    
    
    <string name="dialog_message">Wrong expression!!!</string>
    <string name="dialog_message_exception">Sorry internal exception occurs! Please try again.</string>
    <string name="dialog_message_EmptyStackException">Sorry EmptyStackException occurs! Please try again.</string>
    <string name="dialog_message_ArithmeticException">Sorry ArithmeticException occurs! Please give valid expression.</string>
    <string name="dialog_message_IllegalArgumentException">Sorry IllegalArgumentException occurs! Please try again.</string>
    <string name="dialog_title">Error occurs!</string>
    <string name="ok">OK</string>
    
</resources>