<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TableRow 
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_weight="6" >
		
	    <LinearLayout
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:orientation="vertical"
			android:layout_weight="1">
			
			<TextView
			    android:id="@+id/text_textView"
	   			android:layout_height="match_parent"
			   	android:layout_width="match_parent"
			   	android:text="@string/textViewExpression"
				android:textSize="25dp"
				android:focusable="true"
				android:scrollHorizontally="true"
				android:layout_weight="1"/>
			
			<EditText
				android:id="@+id/text_textBox"
	   			android:layout_height="match_parent"
			   	android:layout_width="match_parent"
				android:gravity="center|right"
				android:textSize="30dp"
				android:focusable="true"
				android:focusableInTouchMode="false"
				android:scrollHorizontally="true"
				android:layout_weight=".50"/>
			
			</LinearLayout>
	</TableRow>
	
	<TableRow
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_weight="1" >
		
	    <LinearLayout
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:orientation="horizontal"
			android:layout_weight="1">
	    	
			<Button
				android:id="@+id/button_history"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/history" 
		    	android:onClick="onClickButtonHistoryMethod"
				android:layout_weight="1"/>
		    
		    <Button
			    android:id="@+id/button_tutorial"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
			    android:text="@string/tutorial" 
		    	android:onClick="onClickButtonTutorialMethod"
			    android:layout_weight="1"/>  
	    	
			<Button
				android:id="@+id/button_clear"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/clear" 
		    	android:onClick="onClickButtonClearMethod"
				android:layout_weight="1"/>
		    
		    <Button
			    android:id="@+id/button_result"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
			    android:text="@string/result" 
		    	android:onClick="onClickButtonResultMethod"
			    android:layout_weight="1"/>
				
		</LinearLayout>	
		
	</TableRow>
	
	<TableRow
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_weight="1" >
		
	    <LinearLayout
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:orientation="horizontal"
			android:layout_weight="1">
		    
	        <Button
				android:id="@+id/button_memoryClear"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/memoryClear" 
		    	android:onClick="onClickButtonMemoryClearMethod"
				android:layout_weight="1"/>
	   
			<Button
				android:id="@+id/button_memoryRetrieve"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/memoryRetrieve" 
		    	android:onClick="onClickButtonMemoryRetrieveMethod"
				android:layout_weight="1"/>
			    
			<Button
				android:id="@+id/button_memorySave"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/memorySave" 
		    	android:onClick="onClickButtonMemorySaveMethod"
				android:layout_weight="1"/>
			
			<Button
				android:id="@+id/button_memoryPush"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/memoryPush" 
		    	android:onClick="onClickButtonMemoryPushMethod"
				android:layout_weight="1"/>
			    
			<Button
				android:id="@+id/button_memoryPop"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/memoryPop" 
		    	android:onClick="onClickButtonMemoryPopMethod"
				android:layout_weight="1"/>
		
		</LinearLayout>	
		
	</TableRow>
	
	<TableRow
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_weight="1" >
		
	    <LinearLayout
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:orientation="horizontal"
			android:layout_weight="1">
	    	
			<Button
				android:id="@+id/button_seven"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/seven" 
		    	android:onClick="onClickButtonSevenMethod"
				android:layout_weight="1"/>
	   
			<Button
				android:id="@+id/button_eight"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/eight" 
		    	android:onClick="onClickButtonEightMethod"
				android:layout_weight="1"/>
			    
			<Button
				android:id="@+id/button_nine"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/nine" 
		    	android:onClick="onClickButtonNineMethod"
				android:layout_weight="1"/>
			
			<Button
				android:id="@+id/button_multiplication"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/multiplication" 
		    	android:onClick="onClickButtonMultiplicationMethod"
				android:layout_weight="1"/>  
			    
			<Button
				android:id="@+id/button_percentage"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/percentage" 
		    	android:onClick="onClickButtonPercentageMethod"
				android:layout_weight="1"/>
		
		</LinearLayout>	
		
	</TableRow>
	
	<TableRow
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_weight="1">
	    
	    <LinearLayout
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:orientation="horizontal"
			android:layout_weight="1">
		    
			<Button
				android:id="@+id/button_four"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/four" 
		    	android:onClick="onClickButtonFourMethod"
				android:layout_weight="1"/>
			<Button
				android:id="@+id/button_five"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/five" 
		    	android:onClick="onClickButtonFiveMethod"
				android:layout_weight="1"/>
			
			<Button
				android:id="@+id/button_six"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/six" 
		    	android:onClick="onClickButtonSixMethod"
				android:layout_weight="1"/>
			
			<Button
				android:id="@+id/button_substraction"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/substraction" 
		    	android:onClick="onClickButtonSubstractionMethod"
				android:layout_weight="1"/>
			
			<Button
				android:id="@+id/button_division"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/division" 
		    	android:onClick="onClickButtonDivisionMethod"
				android:layout_weight="1"/>
		    
		    <!-- <Button
			    android:id="@+id/button_signAlter"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
			    android:text="@string/signAlter" 
		    	android:onClick="onClickButtonSignAlterMethod"
			    android:layout_weight="1"/> -->
			
		</LinearLayout>	
		
	</TableRow>
	    
	<TableRow
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_weight="1">
	    
	     <LinearLayout
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:orientation="horizontal"
			android:layout_weight="1">
	        
			<Button
				android:id="@+id/button_one"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/one" 
		    	android:onClick="onClickButtonOneMethod"
				android:layout_weight="1"/>
			
			<Button
				android:id="@+id/button_two"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/two" 
		    	android:onClick="onClickButtonTwoMethod"
				android:layout_weight="1"/>
		    
		    <Button
				android:id="@+id/button_three"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/three" 
		    	android:onClick="onClickButtonThreeMethod"
				android:layout_weight="1"/>
			
			<Button
				android:id="@+id/button_summation"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/summation" 
		    	android:onClick="onClickButtonSummationMethod"
				android:layout_weight="1"/>
		    
		    <Button
			    android:id="@+id/button_delete"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
			    android:text="@string/delete" 
		    	android:onClick="onClickButtonDeleteMethod"
			    android:layout_weight="1"/>
			
		</LinearLayout>
			
	</TableRow>
	    
	<TableRow
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_weight="1">
	    
	    <LinearLayout
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:orientation="horizontal"
			android:layout_weight="1">
		    
		    <Button
				android:id="@+id/button_zero"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
				android:text="@string/zero" 
		    	android:onClick="onClickButtonZeroMethod"
			    android:layout_weight=".75"/>
	        
		    <Button
			    android:id="@+id/button_dot"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
			    android:text="@string/dot" 
		    	android:onClick="onClickButtonDotMethod"
			    android:layout_weight="1"/>  
		    
		    <Button
		    	android:id="@+id/button_equal"
		    	android:layout_height="match_parent"
			    android:layout_width="match_parent"
		    	android:text="@string/equal" 
		    	android:onClick="onClickButtonEqualMethod"
				android:layout_weight=".75"/>  
		
		</LinearLayout>
	</TableRow>
</TableLayout>